# Optimal_transport

multi_OT_trial/: .gitignore  pyproject.toml
multi_OT_trial/src/multi_OT/: __main__.py
multi_OT_trial/src/multi_OT/result_data/run_N100_D2/20250811-092239/: logs.json
multi_OT_trial/src/multi_OT/result_data/run_N100_D2/20250811-172049/: logs.json
multi_OT_trial/src/multi_OT/result_data/run_N100_D2/20250814-065536/: logs.json
multi_OT_trial/src/multi_OT/result_data/run_N20_D2/20250811-161812/: logs.json
multi_OT_trial/src/multi_OT/result_data/run_N20_D2/20250811-162000/: logs.json
multi_OT_trial/src/multi_OT/result_data/run_N20_D2/20250811-162341/: logs.json
multi_OT_trial/src/multi_OT/result_data/run_N20_D2/20250811-162404/: logs.json
multi_OT_trial/src/multi_OT/result_data/run_N20_D2/20250811-162432/: logs.json
multi_OT_trial/src/multi_OT/result_data/run_N20_D2/20250811-162458/: logs.json
multi_OT_trial/src/multiscale_OT_trial/: multiscale_sinkhorn.py  scaled_OT.py  sinkhorn.py
multi_OT_trial/src/multiscale_OT_trial_copy/: __main__.py  multiscale_sinkhorn.py  scaled_OT.py  sinkhorn.py
multi_OT_trial/src/utils/: OT_interpolation.py  mixed_helpers.py  optimal_transport_computation.py  signal_simulation.py
single_2D_sinusoid/: pyproject.toml
single_2D_sinusoid/src/simple_OT_example/: __main__.py  find_OT_plan.py  interpolate_OT_plan.py  prev_main.py  simulate_signal.py
single_2D_sinusoid/src/simple_OT_example/result_data/: interpolation_cvxpy.npz
single_2D_sinusoid/src/utils/: plots.py
(+6 files in other folders)
