[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Klara Wahlden",email = "klara.wahlden@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
