[project]
name = "single-2d-sinusoid"
version = "0.1.0"
description = ""
authors = [
    {name = "Klara Wahlden",email = "klara.wahlden@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pot (>=0.9.5,<0.10.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "cvxpy (>=1.6.6,<2.0.0)",
    "ecos (>=2.0.14,<3.0.0)",
    "geomloss (>=0.2.6,<0.3.0)",
    "scipy (>=1.16.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "single_2d_sinusoid", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
